# Mood-Diary

./: .env.example  .gitignore  Kristina Alyabeva Mood.md  README.md  pyproject.toml
.github/workflows/: main.yml
app/: fastapi_app.py  fastapi_schemas.py
app/models/: mood_entry.py  user.py
app/streamlit_frontend/: main.py  utils.py
app/streamlit_frontend/components/: mood_entry_form.py  sidebar.py
app/streamlit_frontend/logic/: auth.py  calendar.py  dashboard.py  stats.py
mood_diary/: .gitignore  README.md  requirements.txt  run.py  setup.py
mood_diary/app/: __init__.py  forms.py
mood_diary/app/models/: mood_entry.py  user.py
mood_diary/app/routes/: auth.py  errors.py  main.py  mood.py
mood_diary/app/static/css/: style.css
mood_diary/app/static/js/: main.js
mood_diary/app/templates/: base.html  calendar.html  index.html  landing.html  profile.html
mood_diary/app/templates/auth/: login.html  register.html
mood_diary/app/templates/errors/: 404.html  500.html
mood_diary/app/templates/mood/: entry.html  stats.html
mood_diary/tests/: test_models.py
tests/: conftest.py  test_api.py  test_fuzz.py  test_mood_entry.py
tests/backend/: test_api.py  test_models.py
tests/frontend/: test_auth.py  test_sidebar.py  test_stats.py  test_utils.py
tests/fuzz/: test_fuzz.py
tests/load/: locustfile.py
tests/unit/: test_calendar.py  test_dashboard.py  test_main.py
