[tool.poetry]
name = "mood-diary"
version = "0.1.0"
description = "Mood Diary Application"
authors = ["team@example.com"]
packages = [
    { include = "app" },
    { include = "tests", format = "sdist" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
streamlit = "^1.33.0"
sqlalchemy = "^2.0.23"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
jinja2 = "^3.1.2"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
email-validator = "^2.1.0.post1"
python-dotenv = "^1.0.0"
pytest = "^7.4.3"
flake8 = "^7.0.0"
ruff = "^0.4.0"
bandit = "^1.7.7"
locust = "^2.23.0"
hypothesis = "^6.98.0"
mutmut = "^2.4.4"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
selenium = "^4.20.0"
pytest-cov = "^6.1.1"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 